# rust-wasm-workshop

./: README.adoc
rust/: .gitignore  Cargo.toml
rust/src/: fibonacci.rs  lib.rs  orbits.rs  selection_sort.rs
typescript/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
typescript/public/: index.html
typescript/src/: App.vue  main.ts
typescript/src/components/: BenchmarkResult.vue  BenchmarkRunner.vue
typescript/src/model/: BenchmarkWorker.ts  benchmark.ts  constants.ts  fibonacci.ts  implementations.ts  orbits.ts  run-benchmark.ts  runners.ts  selection-sort.ts  utils.ts
typescript/src/router/: index.ts
typescript/src/style/: _theme.scss
