[package]
name = "rust-wasm-workshop-rust"
version = "0.1.0"
authors = ["Sebastian Ljunggren <sebastianljunggren@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
